tests/rosetta/out/Smalltalk/boyer-moore-string-search.out
/workspace/mochi/tests/rosetta/out/Smalltalk/boyer-moore-string-search.st:48: parse error, expected '|' or identifier
